[package]
name = "tunnetler"
version = "0.1.0"
authors = ["Martin Habovštiak <martin.habovstiak@gmail.com>"]

[dependencies]
piston = "0.32.0"
piston2d-graphics = "0.21.1"
pistoncore-glutin_window = "0.37.0"
piston2d-opengl_graphics = "0.43.0"
piston-viewport = "0.3.0"
rand = "0.3"
num-traits = "0.1.40"
